--- a/index.html
+++ b/index.html
@@ -17,11 +17,10 @@
 
 		<div class="content">
 			<h1 class="title">Miguel<br>Quintal</h1>
-
 			<p>
-        Hey, I’m a Web Developer enthusiast by computer programming in general and more concretely about Web development.
-        I’ve been working as Web Developer for about eight years using great technologies such as React, Angular, NodeJS, PHP, MySQL, Linux, CSS3, HTML5, among others. My passion is create clean and testable code and automate as much as possible tasks.
-        When I have some free time I use to develop my own projects because I think it’s a great way to try new technologies and tools. Check them on my GitHub Page!
+				Hey there! I am a web developer freelancer based in London and I have been involved in different projects and industries for several years.
+        My aim is to create hight performance, scalable and testable applications based on web technologies. For the last few years I have been working mainly around JavaScript ecosystem including React, RxJS, Angular and NodeJS.
+        Follow me on social media and feel free to contact me.
 			</p>
 
 			<ul class="social-icons">
@@ -31,7 +30,7 @@
 				<li><a class="instagram" target="_blank" href="https://www.instagram.com/mquintall" title="Instagram">Instagram</a></li>
 			</ul>
 
-			<p>Want to send me something sweet? <a href="mailto:mquintal88@gmail.com">Email me</a>.</p>
+			<p class="mailme">Want to send me something sweet? <a href="mailto:mquintal88@gmail.com">Email me</a>.</p>
 		</div>
 	</body>
 </html>
