--- a/index.html
+++ b/index.html
@@ -1,46 +1,56 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
-    <!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=UA-159008889-1"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'UA-159008889-1');
-</script>
-
-		<meta charset="utf-8">
-		<title>Miguel Quintal</title>
-		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<link rel="stylesheet" href="css/style.css">
-		<meta name="Description" content="Hey there! I am a web developer freelancer based in London working primarily with React and NodeJS">
 		<!--[if lt IE 9]>
 			<script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
 		<![endif]-->
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<meta charset="utf-8">
+		<title>Miguel</title>
+		<meta name="Description"
+			content="Hey there and welcome! I am an experienced web developer based in London.">
 	</head>
 
 	<body class="animated bounceInDown">
 		<div class="avatar">
-			<img src="https://avatars0.githubusercontent.com/u/2218427?s=200&v=4" alt="Photo">
+			<img src="https://avatars0.githubusercontent.com/u/2218427?s=160&v=4" alt="Profile photo">
 		</div>
 
-		<div class="content">
-			<h1 class="title">Miguel Quintal</h1>
+		<main class="content">
+			<h1 class="title">Miguel</h1>
 			<p>
-				Hey there! I am a web developer freelancer based in London and I have been involved in different projects and industries for several years.
-        My aim is to create hight performance, scalable and testable applications based on web technologies. For the last few years I have been working mainly around JavaScript ecosystem including React, RxJS, Angular and NodeJS.
-        Follow me on social media and feel free to contact me.
+				Hey there! I'm a web developer location independent and working as a freelancer my expertise is mostly around JavaScript creating apps based on Typescript, React, and Nodejs.
+				If you need something feel free to contact me.
 			</p>
 			<ul class="social-icons">
-        		<li><a class="github" target="_blank" rel="noreferrer" href="https://github.com/mquintal" title="GitHub">GitHub</a></li>
-        		<li><a class="linkedin" target="_blank" rel="noreferrer" href="https://www.linkedin.com/in/miguelquintal" title="Linkedin">Linkedin</a></li>
-				<li><a class="twitter" target="_blank" rel="noreferrer" href="https://twitter.com/mquintal88" title="Twitter">Twitter</a></li>
-				<li><a class="instagram" target="_blank" rel="noreferrer" href="https://www.instagram.com/mquintall" title="Instagram">Instagram</a></li>
+				<li>
+					<a class="github" target="_blank" rel="noreferrer" href="https://github.com/mquintal"
+						title="GitHub">GitHub</a>
+					</li>
+				<li>
+					<a class="linkedin" target="_blank" rel="noreferrer" href="https://www.linkedin.com/in/miguelquintal"
+						title="Linkedin">Linkedin</a>
+				</li>
+				<li>
+					<a class="twitter" target="_blank" rel="noreferrer" href="https://twitter.com/mquintal88"
+						title="Twitter">Twitter</a>
+				</li>
+				<li>
+					<a class="medium" target="_blank" rel="noreferrer" href="https://medium.com/@m.quintal"
+						title="Medium">Medium</a>
+				</li>
 			</ul>
 
-			<div class="mailme">Want to send me something sweet? <a href="mailto:mquintal88@gmail.com">Email me</a>.</div>
-		</div>
+			<div class="mailme">Want to send me something sweet? <a href="mailto:mquintal88+web@gmail.com">Email me</a>.</div>
+		</main>
 	</body>
+	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-159008889-1"></script>
+	<script>
+		window.dataLayer = window.dataLayer || [];
+		function gtag() { dataLayer.push(arguments); }
+		gtag('js', new Date());
+
+		gtag('config', 'UA-159008889-1');
+	</script>
 </html>
